src/unit_tests/Semantics/success/whileoneexpression.cl
class Test {
  foo:Test;
  bar():Object { while (not false) loop ("Ooga booga") pool};
};

class Main {
	main() : Int {
		1
	};
};