src/unit_tests/Semantics/fail/whileoneexpression-type-object.cl
class Test {
  foo:Test;
  bar():Int { while (not false) loop ("Ooga booga") pool};
};

class Main {
	main() : Int {
		1
	};
};